Mahout Change Log

Release 0.9 - unreleased

  MAHOUT-1384: Executing the MR version of Naive Bayes/CNB of classify_20newgroups.sh fails in seqdirectory step (smarthi)

  MAHOUT-1382: Upgrade Mahout third party jars for 0.9 Release (smarthi)

  MAHOUT-1380: Streaming KMeans fails when executed in Sequential Mode (smarthi)

  MAHOUT-1379: ClusterQualitySummarizer fails with the new T-Digest for clusters with 1 data point (smarthi)

  MAHOUT-1378: Running Random Forest with Ignored features fails when loading feature descriptor from JSON file (Sam Wu via smarthi)

  MAHOUT-1377: Exclude JUnit.jar from tarball (Sergey Svinarchuk via smarthi)

  MAHOUT-1371: Arff loader can misinterpret nominals with integer, real or string (Mansur Iqbal via smarthi)

  MAHOUT-1370: Vectordump doesn't write to output file in MapReduce Mode (smarthi)

  MAHOUT-1368: Convert OnlineSummarizer to use the new TDigest (tdunning)

  MAHOUT-1367: WikipediaXmlSplitter --> Exception in thread "main" java.lang.NullPointerException (smarthi)

  MAHOUT-1364: Upgrade Mahout codebase to Lucene 4.6 (Frank Scholten)

  MAHOUT-1362: Remove examples/bin/build-reuters.sh (smarthi)

  MAHOUT-1361: Online algorithm for computing accurate Quantiles using 1-D clustering (tdunning)

  MAHOUT-1358: StreamingKMeansThread throws IllegalArgumentException when REDUCE_STREAMING_KMEANS is set to true (smarthi)

  MAHOUT-1355: InteractionValueEncoder produces wrong traceDictionary entries (Johannes Schulte via smarthi)

  MAHOUT-1351: Adding DenseVector support to AbstractCluster (David DeBarr via smarthi)

  MAHOUT-1347: Add Streaming K-Means clustering algorithm to examples/bin/cluster-reuters.sh (smarthi)

  MAHOUT-1345: Enable randomised testing for all Mahout modules (Dawid Weiss, Isabel, sslavic, Frank Scholten, smarthi)

  MAHOUT-1343: JSON output format support in cluster dumper (Telvis Calhoun via sslavic)
